+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changes in Achievo 1.5
----------------------
+ Added New and Edit links to the contract field in projects. [Guido]
* Fixed problem with displaying non active employees in the project
  team search. (Bug #1561) [Yury]
* Fixed weekview date display. [Sandy]
* Fixed typo's in some translations. [Guido]
* Allow all GET and POST parameters in links to index.php. [Guido]

Changes in Achievo 1.4.4
------------------------
* Fixed creating users when using MySQL Strict mode [Sandy]
* Fixed SQLInjection in project graphs. [Sandy]
* Fixed autonumbering of projects. [Sandy]

Changes in Achievo 1.4.3
------------------------
* Fixed XSS in scheduler legenda [Sandy]
* Fixed Arbitrary File Upload with the docmanager. In the 
  configs/docmanager.inc.php is now a new config with all
  supported extensions. [Sandy] 

Changes in Achievo 1.4.2
------------------------
+ Added config for turning on the display of the employe
  age in the scheduler birthday view. Default they are turned 
  off. [Sandy]
* Fixed German translation. [Sandy]
* Fixed Problem with sessionmanager and billing module. 
  (Bug #1647) [Sandy,Lars]
* Updated ATK to version 6.4.3

Changes in Achievo 1.4.1
------------------------
* Fixed bug with saving the user preferences. (Bug #1571) [Sandy]
* Updated a value in the reports config that caused a crash
  in the hoursurvey. [Sandy]
* Fixed bug in sorting the hour survey report. (Bug #1581) [Sandy]
* Fixed problem in scheduler with non existing field. [Sandy]
* Fixed bug in calculating if a week is complete for showing 
  the lock hours link in the time registration. (Bug #1591) [Sandy]
* Updated PHP version number in the setup. [Sandy]
* Fixed bug in saving the weekdays of a user contracts (Bug #1601) [Sandy]
* Updated Dutch and Slovak translation. [Sandy]
